--- a/rails/hello-world-rails6/Dockerfile
+++ b/rails/hello-world-rails6/Dockerfile
@@ -1,12 +1,12 @@
-FROM ruby:2.6.2-alpine3.9
+#Builder
+FROM ruby:2.6.2-alpine3.9 as builder
+
+ENV RAILS_ENV=production
+ENV RAILS_SERVE_STATIC_FILES=true
 
 RUN apk add --update nodejs nodejs-npm yarn build-base sqlite-dev
 
 WORKDIR /app
-
-ENV RAILS_ENV=production
-ENV RAILS_SERVE_STATIC_FILES=true
-ENV RAILS_LOG_TO_STDOUT=true
 
 COPY Gemfile* ./
 
@@ -15,5 +15,17 @@ RUN bundle install --without development test
 COPY . .
 
 RUN bundle exec rake assets:precompile
+
+#Final Stage
+FROM ruby:2.6.2-alpine3.9
+
+RUN apk add --update sqlite-dev
+
+WORKDIR /app
+
+ENV RAILS_LOG_TO_STDOUT=true
+
+COPY --from=builder /usr/local/bundle/ /usr/local/bundle/
+COPY --from=builder /app ./
 
 CMD ["rails", "server", "-b", "0.0.0.0", "-e", "production", "-p", "3000"]
